<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/potrait"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".view.activity.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/img">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/content_image"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMasuk"
        android:layout_width="341dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login_app"
            android:textColor="@android:color/black"
            android:textSize="17.45dp"
            android:typeface="monospace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ex_a"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:typeface="monospace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ex_b"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:typeface="monospace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ex_c"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:typeface="monospace" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsername"
                android:layout_width="324dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:hint="@string/masukkan_username"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:background="@color/formColor"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="324dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:hint="@string/masukkan_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:background="@color/formColor"
                android:paddingLeft="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnMasuk"
            android:layout_width="109dp"
            android:layout_height="36dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/button_selector"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/progressbar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>