<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    app:cardCornerRadius="5dp">

    <TextView
        android:id="@+id/textJudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/header_form_kerja"
        android:textColor="@color/darkTextColor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textTgl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textJudul"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/tgl_kegiatan"
        android:textColor="@color/darkTextColor"
        android:textSize="15sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layTex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTgl">

        <EditText
            android:id="@+id/edtTanggal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#EBEDF3"
            android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
            android:hint="@string/tanggal"
            android:inputType="date"
            android:paddingLeft="15dp"
            android:textSize="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layWak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layTex">

        <EditText
            android:id="@+id/edtWaktu"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#EBEDF3"
            android:drawableEnd="@drawable/ic_baseline_access_time_24"
            android:hint="Waktu"
            android:inputType="date"
            android:paddingLeft="15dp"
            android:textSize="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textKegiatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layWak"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/tgl_kegiatan"
        android:textColor="@color/darkTextColor"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layKeg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textKegiatan">

        <EditText
            android:id="@+id/edtKegiatan"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#EBEDF3"
            android:hint="@string/nama_kegiatan"
            android:inputType="date"
            android:paddingLeft="15dp"
            android:textSize="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textUlasan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layKeg"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/ulasan_kegiatan"
        android:textColor="@color/darkTextColor"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layUl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textUlasan">

        <EditText
            android:id="@+id/edtUlasan"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#EBEDF3"
            android:hint="@string/isi_kegiatan"
            android:inputType="date"
            android:paddingLeft="15dp"
            android:textSize="15dp" />
    </com.google.android.material.textfield.TextInputLayout>



</RelativeLayout>