<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/konfirmasi"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/lblMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBatal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btnbatal"
            android:minHeight="35dp"
            android:layout_marginEnd="20dp"
            android:text="@string/tidak"
            android:textAllCaps="false"
            android:textColor="@color/birumuda"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnOke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btnsimpandata"
            android:minHeight="35dp"
            android:text="@string/ya"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>